Changelog
---------

Version 1.0dev
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Remove ``safe_render`` implementation detail.  It hid information
  in tracebacks. [chrism]

- Fixed a few more UnicodeDecodeErrors (test contributed by Wiggy).
  In particular, never upcast to unicode during transformation, and
  utf-8 encode Unicode attribute keys and values in Assign expressions
  (e.g. py:attrs). [chrism]

- Implemented TAL global defines. [malthe]

- Added support for variables with global scope. [malthe]

- Curly braces may now be omitted in an expression interpolation if
  the expression is just a variable name; this complies with the
  Genshi syntax. [malthe]

- Fixed off-by-one bug in interpolation routine. [malthe]

- The repeat-clause should not output tail with every iteration. [malthe]

- UTF-8 encode Unicode attribute literals. [chrism]

- Substantially reduced compiler overhead for lxml CDATA
  workaround. [malthe]

- Split out element compiler classes for Genshi and Zope language
  dialects. [malthe]

- Make lxml a setuptools "extra".  To install with lxml support
  (currently required by Genshi), specify "z3c.pt [lxml]" in
  any references you need to make to the package in buildout or
  in setup.py install_requires.  [chrism]

- Add test-nolxml and py-nolxml parts to buildout so the package's
  tests can be run without lxml.  [chrism]  

- CDATA sections are now correctly handled when using the
  ElementTree-parser. [malthe]

- Fixed bug in path-expressions where string instances would be
  (attempted) called. [malthe]

- No longer require default namespace. [malthe]

- Changed source code debug mode files to be named <filename>.py instead of
  <filename>.source.

- Generalized ElementTree-import to allow both Python 2.5's
  ``xml.etree`` module and the standalone ``ElementTree``
  package. [malthe]

- CDATA sections are now correctly preserved when using expression
  interpolation. [malthe]

- Expression results are now validated for XML correctness when the